# docs/swagger.json
@@ -982,6 +982,9 @@
                 "expires_in": {
                     "type": "integer"
                 },
+                "role": {
+                    "type": "string"
+                },
                 "token_type": {
                     "type": "string"
                 }
@@ -1012,6 +1015,9 @@
                 },
                 "expires_in": {
                     "type": "integer"
+                },
+                "role": {
+                    "type": "string"
                 },
                 "token_type": {
                     "type": "string"
@@ -1047,19 +1053,25 @@
         "ds.Veteran": {
             "type": "object",
             "properties": {
-                "birthDate": {
+                "birth_date": {
                     "type": "string"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
-                "firstName": {
+                "documents": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ds.Document"
+                    }
+                },
+                "first_name": {
                     "type": "string"
                 },
-                "imageUrl": {
+                "image_url": {
                     "type": "string"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "patronymic": {
